--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://www.flaticon.com/svg/vstatic/svg/87/87390.svg?token=exp=1617787322~hmac=c076aa966a50bf46fde633d323f16a63"
-    />
+    <link rel="icon" href="./SNOWLOGOony.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="https://www.flaticon.com/svg/vstatic/svg/87/87390.svg?token=exp=1617787322~hmac=c076aa966a50bf46fde633d323f16a63"
-    />
+    <!-- <meta name="theme-color" content="#000000" /> -->
+    <meta name="description" content="Snow Club: Social Networking" />
+    <link rel="apple-touch-icon" href="./SNOWLOGOony.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Snow Club Social Networking</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
